ticket/infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          args: [
            '-p', 
            '4222',
            '-m', 
            '8222',
            '-hbi', # Heartbeat Interval # what it does is # it sends a heartbeat to the server every 5 seconds
            '5s',
            '-hbt', # Heartbeat Timeout #what it does is # it waits for 5 seconds before considering the connection dead
            '5s',
            '-hbf', # Heartbeat Failures # what it does is # it considers the connection dead after 2 failed heartbeats total time will be # 10 seconds
            '2',
            '-SD',
            '-cid',
            'ticketing'  
          ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-svc
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222

    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
