ticket/infra/k8s/ingress-srv.yaml
# # apiVersion: networking.k8s.io/v1
# # kind: Ingress
# # metadata:
# #   name: ingress-service
# #   annotations:
# #     nginx.ingress.kubernetes.io/use-regex: "true"
# # spec:
# #   ingressClassName: nginx
# #   rules:
# #     - host: ticketing.dev
# #       http:
# #         paths:
# #           - path: /api/users/?(.*)
# #             pathType: ImplementationSpecific
# #             backend:
# #               service:
# #                 name: auth-srv
# #                 port:
# #                   number: 3000
# #           - path: /?(.*)
# #             pathType: Prefix
# #             backend:
# #               service:
# #                 name: client-srv
# #                 port:
# #                   number: 3000



# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     nginx.ingress.kubernetes.io/use-regex: "true"
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: ticketing.dev
#       http:
#         paths:
#           # Match all API routes, including dynamic ones
#           - path: /api/?(.*)
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: auth-srv
#                 port:
#                   number: 3000

#           # Match all client-side (Next.js) routes including static, SSR, and _next/*
#           - path: /?(.*)
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: client-srv
#                 port:
#                   number: 3000



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/payments/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000
          - path: /api/tickets/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tickets-srv
                port:
                  number: 3000
          - path: /api/orders/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: orders-srv
                port:
                  number: 3000
          - path: /_next/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
          - path: /static/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
          - path: /auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
